k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: swath
  name: swath
  namespace: swath
spec:
  replicas: 1
  selector:
    matchLabels:
      app: swath
  template:
    metadata:
      labels:
        app: swath
    spec:
      containers:
      - image: northamerica-northeast2-docker.pkg.dev/agile-tangent-401105/container-registry/swath@sha256:ba278dc05b7fd3ced3718b41ff5e68d84ceb5620bbdc10689b298efdacac573e
        name: swath
