k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: swath
  namespace: swath
  name: swath-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.regional-static-ip-name: "gke-static-ip"
spec:
  rules:
  - host: swath.gule-gulzar.com
    http:
      paths:
      - path: "/"
        backend:
          service:
            name: swath-lb
            port:
              number: 80
        pathType: Exact
